prevent scrollbar from repositioning web page

--- a/public/modules/apps/css/apps.css
+++ b/public/modules/apps/css/apps.css
@@ -26,6 +26,6 @@ a[ng-click] {
     flex: 1 1 auto;
 }
 
-.myMB16 {
-    margin-bottom: 16px;
+.myMT16 {
+    margin-top: 16px;
 }
