--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 .content {
 	margin-top: 50px;
 }
